[package]
name = "pomo-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
playback-rs = "0.2.5"
relm4-components = "0.5.0"
relm4 = { version = "0.5.0", features = ["macros"] }
